# nexus-sdk

./: INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SETUP_COMPLETE.md  START_HERE.md  pyproject.toml
.omc/: project-memory.json
.omc/state/: agent-replay-14e36b8a-ad47-4a50-af20-c758b88279a2.jsonl  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-02-14T23-30-29-967Z.json
docs/: SPEC-SDK-KNOWLEDGE-MODULE.md
examples/: basic_usage.py  cost_tracking.py  custom_provider.py  knowledge_search.py  multi_agent.py  provider_swap.py
nexus_sdk/: __init__.py  config.py  types.py
nexus_sdk/agents/: __init__.py  names.py  registry.py
nexus_sdk/cost/: __init__.py  budget.py  pricing.py  sqlite_storage.py  tracker.py
nexus_sdk/knowledge/: __init__.py  client.py  debug.py  embeddings.py  local_search.py  local_store.py  search.py  types.py
nexus_sdk/providers/: __init__.py  base.py  claude.py  gemini.py  openai_provider.py
