[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent-sdk"
version = "0.1.0"
description = "Multi-agent orchestration SDK with swappable AI model providers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Garrett Eaglin", email = "garrett@nexus.dev"}
]
keywords = ["ai", "agents", "orchestration", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.0.0",
]
gemini = [
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["nexus_sdk*"]

[tool.setuptools.package-data]
nexus_sdk = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-ignore = ["E501", "E701", "E702", "E731"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
